# lola-os

./: .coverage  .gitignore  README.md  pyproject.toml  setup.sh
docs/: conf.py  index.md  quickstart.md
docs/_build/: .buildinfo  contribution.html  genindex.html  index.html  objects.inv  quickstart.html  search.html  searchindex.js
docs/_build/.doctrees/: contribution.doctree  environment.pickle  index.doctree  quickstart.doctree
docs/_build/_sources/: contribution.md.txt  index.md.txt  quickstart.md.txt
docs/_build/concepts/: core.html
docs/_build/tutorials/: build_your_first_agent.html  building_onchain_tools.html
docs/concepts/: core.md
docs/tutorials/: build_your_first_agent.md  building_onchain_tools.md
documentations/: changelog.md
examples/onchain_analyst/: README.md  agent.py  config.yaml
examples/research_agent/: README.md  agent.py  config.yaml
python/lola/agents/: __init__.py  base.py  coding.py  collaborative.py  conversational.py  legacy_interface.py  meta_cognition.py  orchestrator.py  plan_execute.py  react.py  router.py  synthetic_data.py
python/lola/agnostic/: __init__.py  cost.py  fallback.py  unified.py
python/lola/chains/: __init__.py  connection.py  contract.py  key_manager.py  oracles.py  utils.py  wallet.py
python/lola/cli/: main.py
python/lola/core/: __init__.py  agent.py  graph.py  memory.py  node.py  state.py
python/lola/evals/: __init__.py  (+5 more)
tests/: test_agents.py  test_agnostic.py  test_chains.py  test_cli.py  test_core.py  test_evals.py  test_examples.py  test_guardrails.py  test_hitl.py  test_libs_axolotl_trainer.py  test_libs_celery_tasks.py  test_libs_chainlink_price_feed.py  test_libs_haystack_pipeline.py  test_libs_huggingface_hub.py  test_libs_langchain_adapter.py  test_libs_langchain_llms.py  test_libs_langchain_tools.py  test_libs_litellm_proxy.py  test_libs_llamaindex_retrievers.py  test_libs_ollama_runner.py  test_libs_prometheus_exporter.py  test_libs_vector_dbs_chroma.py  test_libs_wandb_logger.py  test_orchestration.py  test_perf_opt.py  test_rag.py  test_specialization.py  test_tools.py  test_utils.py
(+84 files in other folders)
