[tool.poetry]
name = "lola-os"
version = "1.0.0"
description = "LOLA OS TMVP 1: Open-source framework for AI agents"
authors = ["Levi Chinecherem Chidi <lchinecherem2018@gmail.com>"]
readme = "README.md"
packages = [{include = "lola", from = "python"}]

[tool.poetry.dependencies]
python = "^3.10"
litellm = "^1.0"
pydantic = "^2.0"
web3 = "^6.0"
websockets = "^13.0"
click = "^8.1"
pyyaml = "^6.0"
sphinx = "^7.0"  # For documentation
sphinx-rtd-theme = "^2.0"  # Read the Docs theme

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as async to run with pytest-asyncio",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"